# ai-discovery-backend

./: Dockerfile  deploy_backend_direct.sh  env.prod  init.py  pyproject.toml  requirements.txt:
src/api/: __init__.py  main.py
