[tool.poetry]
name = "ai-discovery-backend"
version = "0.1.0"
description = "Backend para o sistema de chat com IA"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
